--- a/client/src/components/pomodoro/slider.css
+++ b/client/src/components/pomodoro/slider.css
@@ -8,7 +8,7 @@
   background-color: hotpink;
   cursor: pointer;
   width: 40px;
-  height: 40px;
+  height: 34px;
   border-radius: 30px;
 }
 
@@ -20,13 +20,7 @@
   background-color: burlywood;
 }
 
-.main {
-  background-color: #30384b;
-  color: #eee;
-}
-
 main {
-  padding-top: 50px;
   max-width: 340px;
   margin: 0 auto;
   text-align: center;
@@ -34,26 +28,22 @@ main {
 
 button {
   background-color: transparent;
-  color: rgba(255, 255, 255, 0.8);
+  color: grey;
   border: 0;
   display: inline-block;
-  width: 100px;
   cursor: pointer;
 }
 
 button.with-text {
-  width: auto;
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: white;
   border-radius: 10px;
-  padding: 10px 20px;
   font-size: 1.4rem;
   line-height: 36px;
 }
 
 button.with-text svg {
   width: 36px;
-  float: left;
-  margin-right: 5px;
+  float: center;
 }
 
 label {
