--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;500;700&display=swap');
-@import-normalize;
 
 * {
   box-sizing: border-box;
@@ -11,6 +10,7 @@ body {
   line-height: 1.5;
   font-size: calc(12px + 0.4vw);
   background-color: rgb(249, 250, 251);
+  height: 100%;
 }
 
 h1,
@@ -21,4 +21,13 @@ h5,
 h6,
 p {
   margin: 0;
+}
+
+ul,
+li {
+  all: unset;
+}
+
+a {
+  text-decoration: none;
 }
