--- a/client/src/components/layout/Dash.module.css
+++ b/client/src/components/layout/Dash.module.css
@@ -11,8 +11,11 @@
 .weather {
   grid-area: 1 / 1 / 2 / 2;
 }
+.login {
+  grid-area: 1 / 2 / 2 / 2;
+}
 .timer {
-  grid-area: 1 / 2 / 2 / 3;
+  grid-area: 1 / 1 / 1 / 3;
 }
 .journal {
   grid-area: 1 / 3 / 3 / 4;
