--- a/client/src/components/pomodoro/Pomodoro.module.css
+++ b/client/src/components/pomodoro/Pomodoro.module.css
@@ -1,32 +1,24 @@
 .overall{
-  padding-top: 50px;
   width: 200px;
   text-align: center;
-  padding-left: 10px;
-  margin-bottom: 45px;
+  text-align: center;
+  box-shadow: 0px 4px 7px -4px black;
+  border-radius: 100px;
 }
 
-.backbutton{
-  background-color: transparent;
-  color: grey;
-  display: inline-block;
-  align-items: center;
-  text-align: center;
-  width: 20%;
-  cursor: pointer;
-}
 
 .settingsbutton{
   background-color: transparent;
-  color: grey;
+  color: rgb(58, 58, 58);
   display: flex;
   width: 50px;
   cursor: pointer;
+
 }
 
 .pausebutton{
   background-color: transparent;
-  color: grey;
+  color: rgb(58, 58, 58);
   display: flex;
   width: 50px;
   cursor: pointer;
@@ -34,20 +26,74 @@
 
 .playbutton{
   background-color: transparent;
-  color: grey;
+  color: rgb(58, 58, 58);
   display: flex;
   width: 50px;
   cursor: pointer;
 }
 
 .progresstime {
-  font-family: sans-serif;
-  font-size: 40px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 600;
+  font-size: 37px;
+  color: rgb(58, 58, 58);
+  
 }
 
 .buttonposition {
   display : flex;
   justify-content: center;
 }
+
+.label {
+  margin-bottom: 20px;
+}
+
+.playbutton:hover  {
+  color: rgb(19, 19, 19);
+}
+
+.pausebutton:hover  {
+  color: rgb(19, 19, 19);
+}
+
+.settingsbutton:hover  {
+  color: rgb(19, 19, 19);
+}
+
+
+.btn_back {
+  font-size:1.5rem;
+  border:2px solid rgb(210, 210, 210);
+  border-radius:100px;
+  width:40px;
+  height:40px;
+  padding:5px;
+  margin: 10% auto;
+  transition: .5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.btn_back:hover {
+  width:125px;
+  background-color:  rgb(210, 210, 210);
+  box-shadow: 0px 5px 5px rgba(0,0,0,0.2);
+  color:  rgb(19, 19, 19);
+  transition:.3s;
+
+}
+
+.icon {
+  position: relative;
+  top: 44%;
+  transform: translateY(-50%);
+  text-align:center;  
+  color: rgb(210, 210, 210);
+}
+
+.icon:hover{
+  color: white;
+}
+
+
 
 
