--- a/client/src/components/spotify/SearchBar.module.css
+++ b/client/src/components/spotify/SearchBar.module.css
@@ -9,10 +9,15 @@
 .searchInput {
   margin: 10px 0px 7px 0px;
   width: 100%;
-  border-radius: 10px;
-  border: 3px solid rgb(36, 36, 36);
-  box-shadow: 0 8px 6px -6px black;
+  border-radius: 15px;
+  border: 0px solid rgb(59, 59, 59);
+  box-shadow: 0 5px 5px -6px black;
   outline: none !important;
+  height: 30px;
+  padding-left: 10px;
+}
+.searchInput:hover {
+  height: 32px;
 }
 
 .searchInput:focus {
@@ -27,23 +32,26 @@
 }
 
 .btn {
-  box-shadow: 0 8px 6px -6px black;
-  align-items: center;
+  box-shadow: 0 5px 4px -4px black;
   appearance: none;
-  background-color: #1DB954;
+  background-color: #66616a;
   border: 0px solid #dbdbdb;
   color: #ffffff;
   cursor: pointer;
   font-family: BlinkMacSystemFont,-apple-system,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 1.2rem;
-  height: 2.0em;
-  margin: 5px;
-  border-radius: 4px;
+  height: 1.5em;
+  text-align: center;
+  width: auto;
+  margin: 25px 6px 10px 6px;
+  padding: 5px 18px 3px 16px;
+  border-radius: 40px;
+  
 }
 
 .btn:active {
   color: #fff;
-  background-color: #4a4a4a;
+  background-color: #636363;
   outline: 0;
 }
 
@@ -53,8 +61,9 @@
 }
 
 .btn:hover {
-  background-color: #16863e;
-  color: #fff;
+  background-color: #fdcfdfe1;
+  color: #7d7d7d;
+  transition: ease-in-out;
 }
 
 
