--- a/client/src/components/layout/SideBar.scss
+++ b/client/src/components/layout/SideBar.scss
@@ -113,7 +113,7 @@
     }
     a.wecare-link {
       &:after {
-        content: 'WE-CARE';
+        content: 'BACKCARE';
       }
     }
     a.timer-link {
