--- a/client/src/components/journal/JournalItem.module.css
+++ b/client/src/components/journal/JournalItem.module.css
@@ -16,9 +16,9 @@
 }
 
 .headerText {
-  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 500;
   font-size: 35px;
-  color: #37393c;
+  color: #3f4042;
   margin-right: 30px;
 }
 
@@ -43,7 +43,8 @@
 .container {
   display: flex;
   align-items: center;
-  border: 1px solid rgb(229, 233, 255);
+  box-shadow: rgb(145 158 171 / 20%) 0px 3px 1px -2px,
+    rgb(145 158 171 / 14%) 0px 2px 2px 0px, rgb(145 158 171 / 12%) 0px 1px 5px;
   border-radius: 16px;
   padding: 8px;
   background-color: #fef6ff;
@@ -87,12 +88,12 @@
 
 .danger {
   color: rgb(255, 85, 85);
-  background-color: rgb(255, 218, 218);
+  background-color: #fdcfdfce;
 }
 
 .normal {
   color: rgb(88, 111, 250);
-  background-color: rgb(229, 233, 255);
+  background-color: #a6dcefe5;
 }
 
 .tags {
@@ -123,7 +124,7 @@
   flex-direction: column;
   padding: 2px 5px;
   border: 1px solid #ececec;
-  background-color: #cd8686;
+  background-color: #beaefb;
   color: white;
   border-radius: 12px;
   align-items: center;
