--- a/client/src/components/layout/Home.module.css
+++ b/client/src/components/layout/Home.module.css
@@ -82,12 +82,22 @@
   
 }
 
+
+.weather:hover {
+  transition: all 0.2s ease-in-out 0s;
+  transform: scale(1.05, 1.05);
+}
+
 .timer {
- 
   margin-top: 2em;
   margin-left: 1.2em;
-
 }
+
+.timer:hover {
+  transition: all 0.2s ease-in-out 0s;
+  transform: scale(1.05, 1.05);
+}
+
 
 
 
