--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bakbak+One&family=Ewert&family=Freckle+Face&family=Moul&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,800;1,400&display=swap');
 
 * {
   box-sizing: border-box;
@@ -6,7 +6,7 @@
 
 body {
   margin: 0;
-  font-family: 'Public Sans', sans-serif;
+  font-family: 'Rubik', sans-serif;
   line-height: 1.5;
   font-size: calc(12px + 0.4vw);
   background-color: rgb(249, 250, 251);
