--- a/client/src/components/journal/JournalItem.module.css
+++ b/client/src/components/journal/JournalItem.module.css
@@ -53,16 +53,13 @@
  
 }
 
-/* .body {
-
-  
-} */
 
 .title {
+  font-weight: 200;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   color: #262626;
 }
 
@@ -116,7 +113,8 @@
 }
 
 .entry_header {
-  font-size: 14px;
+  font-size: 15px;
+  font-weight: 500;
 }
 
 .date {
