--- a/client/src/components/layout/Break.module.css
+++ b/client/src/components/layout/Break.module.css
@@ -1,4 +1,7 @@
-.container {
-  margin: 4em 4em 4em 6em;
-
+.writeHelperTool {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  min-height: 50%;
+  top: 50%;
 }
