--- a/client/src/components/journal/EditForm.module.css
+++ b/client/src/components/journal/EditForm.module.css
@@ -1,3 +1,16 @@
+.background{
+  background-color: rgba(0,0,0,0.7);
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: auto;
+  z-index: 99999;
+}
 .main {
   border-radius: 16px;
   padding: 10px;
