--- a/client/src/components/journal/Details.module.css
+++ b/client/src/components/journal/Details.module.css
@@ -1,5 +1,5 @@
 .background{
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0,0,0,0.4);
   position: fixed;
   height: 100%;
   width: 100%;
@@ -13,28 +13,53 @@
 }
 
 .header {
+
   display: flex;
   justify-content: space-between;
 }
 
 .xbutton {
-  all: unset;
-  background-color: #c197ff;
-  color: white;
-  border-radius: 10px;
-  padding: 3px 10px;
+  align-self: end; margin-right: 5px;
+  font-size: 28px;
+  color: rgb(255, 255, 255);
   cursor: pointer;
-  display: flex;
-  align-self: end;
 }
 
-.editbutton{
-  all: unset;
-  background-color: #c197ff;
-  color: white;
-  border-radius: 10px;
-  padding: 3px 10px;
+.xbutton:hover {
   cursor: pointer;
+  color: rgb(104, 104, 104);
+}
+
+.submitbutton {
+  margin-right: 5px;
+  cursor: pointer;
+  font-size: 1.1em;
+  margin-bottom: -2px;
+}
+
+.submitbutton:hover {
+  color: white;
+}
+
+
+.editbutton{
+  align-self: end;
+  margin-right: 5px;
+  cursor: pointer;
+}
+
+.editbutton:hover {
+  color: white;
+}
+
+.deletebutton {
+  align-self: end;
+  margin-right: 5px;
+  cursor: pointer;
+}
+
+.deletebutton:hover {
+  color: white;
 }
 
 .journalbtn:hover {
@@ -43,21 +68,20 @@
 }
 
 .container {
-  display: flex;
-  flex-direction: column;
-  border: 1px solid rgb(229, 233, 255);
-  border-radius: 16px;
-  padding: 5px;
-  background-color: #fef6ff;
-  color: #4d5156;
-  gap: 10px;
-  cursor: pointer;
-  width: 30%;
+  background: rgba(255, 255, 255, 0.616);
+  border-radius: 13px;
+  box-shadow: 0 4px 35px rgba(94, 94, 94, 0.555);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(0px);
+  border: 1px solid rgba(255, 255, 255, 0.428);
+  padding: 10px;
+  width: 30rem;
+  overflow: auto;
 }
 
 .title {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   margin-bottom: 5px;
   color: #343434;
@@ -113,20 +137,33 @@
 }
 
 .entry_header {
-  font-size: 14px;
+  font-size: 20px;
+  font-weight: 600;
+  color: rgb(62, 62, 62);
+
 }
+
+.dateContainer {
+  display: flex;
+  justify-content: center;
+  margin-top: -20px;
+  margin-bottom: 25px;
+}
+
 
 .date {
   display: flex;
-  flex-direction: column;
-  padding: 2px 15px;
-  background-color: #cd8686;
+  /* flex-direction: column; */
+  padding: 2px 30px;
+  background-color: #b0a4e1;
   color: white;
-  border-radius: 12px;
+  border-radius: 10px;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   align-self: stretch;
   font-weight: bold;
+  width: 200px;
+  
 }
 
 .date__month {
@@ -143,16 +180,30 @@
   font-weight: bold;
 }
 
+.descriptionLabel {
+  font-size: 16px;
+  font-weight: 400;
+}
+
 .description {
-  font-size: 12px;
+  font-weight: 300;
+  font-size: 14px;
+  text-align: center;
 }
 
 .textformat{
-  width: 70%
+  width: 70%;
+  display: flex;
+  justify-content: center;
+  margin-left: 3.6em;
 }
 
+
 .detailscontainer{
-  margin: 0px 0px 0px 20px;
+margin: 12px;
+display: flex;
+flex-direction: column;
+justify-content: center;
 
 }
 
@@ -173,4 +224,50 @@
 
 .checkbox{
   margin-bottom: 10px;
+}
+
+.buttons {
+  display: flex;
+  font-size: 26px;
+  justify-content: center;
+  margin-top: 15px;
+  margin-bottom: -15px;
+  gap: 10px;
+  color: rgb(62, 62, 62);
+}
+
+
+.inputField {
+  all: unset;
+  font-family: sans-serif;
+  padding: 10px 20px 10px 10px;
+  background: rgba(255, 255, 255, 0.704);
+  border-radius: 6px;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.147);
+  font-size: 14px;
+  font-weight: 400;
+  width: 93%;
+}
+
+.radioBox {
+  border-radius: 5px;
+  width: 14px;
+  height: 14px;
+  background-color: white !important;
+  accent-color: #ffffff;
+  margin-right: 7px;
+}
+
+.checkbox{
+  margin-left: 4em;
+  display: flex;
+  gap: 0.7rem;
+  align-items: center;
+  font-weight: 400;
+  position: relative;
+  cursor: pointer;
+  font-size: 17px;
+  user-select: none;
+  margin-bottom: 0.3em;
+  color: rgb(55, 54, 57);
 }
