--- a/client/src/components/news/NewsEntryList.module.css
+++ b/client/src/components/news/NewsEntryList.module.css
@@ -1,50 +1,78 @@
 .newscontainer{
   display: flex;
-  margin: 5px 10px;
+  margin-top: 25px;
+  border-radius: 20px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(0px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  margin-right: 1em;
+  padding: 1.6em 2em 2em 2em;
+  color:rgb(66, 66, 66);
   flex-direction: column;
   height: 324px;
   overflow: auto;
-  padding: 7px;
+  padding: 20px;
   width: 35%;
+  height: 605px;;
+}
 
+.body {
+  width: 31vw;
 }
 
 .source {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 10px;
-  align-items: flex-start;
-  align-self: start;
-  margin-top: 20px;
+  margin-top: 2px;
   color: gray;
-  font-family: Trebuchet MS;
+  font-weight: 500;
+  font-size: 16px;
+  margin-left: 5px;
+  
+}
+
+.section {
+  border-radius: 20px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(0px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  padding: 0.6em 0.6em 0.6em 0.6em;
+  color:rgb(66, 66, 66);
+  margin-bottom: 15px;
+  margin-top: 5px;
+}
+
+.subSection {
+  display: flex;
+  flex-direction: row-reverse;
+  padding: 0.2em;
 }
 
 .imgTag{
-  display: flex;
-  flex-direction: row;
+
   margin-bottom: 10px;
-  font-weight: bolder;
-  border-bottom: 1px solid;
-  font-family: Arial Rounded MT Bold;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: medium;
+  font-weight: 500;
+  margin-left: 8px;
+  padding: 10px;
+
 }
 
 .thumbnail {
-  max-width: 40%;
-  align-self: end;
-  display: flex;
-  border-radius: 10px;
-  margin-bottom: 20px;
-
+  height: fit-content;
+  border-radius: 7px;
+  max-width: 125px;
+  align-self: center;
 }
 
 
 .topstories{
-  margin-bottom: 5px;
-  font-weight: bold;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  color: hotpink;
-  font-size: larger;
+  margin-top: -0.3em;
+  padding-bottom: 1em;
+  font-weight: 500;
+  color: rgb(255, 142, 198);
+  font-size: 28px;
   position: sticky;
 }
 
@@ -65,7 +93,8 @@
   }
 
   *::-webkit-scrollbar-thumb {
-    background-color: #f575de;
+    background-color: #b1b2e5;
     border-radius: 24px;
     border: 3px solid #ffffff;
   }
+
