--- a/client/src/components/readmeHelper/WriteHelperTool.module.css
+++ b/client/src/components/readmeHelper/WriteHelperTool.module.css
@@ -1,5 +1,20 @@
+.main_container{
+  margin-top: 25px;
+  border-radius: 20px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(0px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  margin-right: 1em;
+  padding: 1.6em 2em 2em 2em;
+  color:rgb(66, 66, 66);
+  height: 605px;
+}
+
 .heading {
-  margin-bottom: 0.6em;
+  margin-bottom: 0.5em;
+  font-weight: 600;
+  font-size: 32px;
 }
 
 .subheading {
@@ -7,26 +22,36 @@
 }
 
 .formGroup {
+
   display: flex;
   flex-direction: column;
-  margin-bottom: 2em;
-  max-width: 50vw;
-  overflow:scroll;
+  margin-bottom: 1em;
+  width: 37vw;
+
 }
 
 .formInput {
+  background-color: rgba(255, 255, 255, 0.784);
   margin-bottom: 1em;
+  border: none;
+  height: 28px;
+  border-radius: 5px;
+  padding-left: 10px;
 }
 
 .btnReset {
-  margin-top: -2em;
-  margin-right: 0.5em;
-  height: 90%;
+  background-color: #e290ade1;
+  border-radius: 15px;
+  box-shadow: -1px 7px 5px -6px rgb(62, 62, 62);
+  width: 100px;
+  padding: 3px 0px;
 }
 
 .btnGenerate {
-  margin-top: -2em;
-  height: 90%;
+  background-color: #85cee9e5;
+  width: 100px;
+  border-radius: 15px;
+  box-shadow: -1px 7px 5px -6px rgb(62, 62, 62);
 
 }
 .cardContainer {
@@ -36,8 +61,29 @@
 }
 
 .btnGroup {
+  text-align: center;
   display: flex;
-  justify-content:center;
+  justify-content: center;
+  gap:23px;
   flex-direction: row-reverse;
-
+  cursor: pointer;
+  color: rgb(255, 255, 255);
+  font-size: 18px;
 }
+
+.divContainer {
+  font-weight: 300;
+  font-size: 15px;
+  border-radius: 10px;
+  max-width: 67vh;
+  margin-top: -2em;
+  overflow: auto;
+  height: 220px;
+  background-color: rgba(255, 255, 255, 0.632);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(0px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  padding: 0.5em;
+}
+
