--- a/client/src/components/auth/Login.module.css
+++ b/client/src/components/auth/Login.module.css
@@ -56,6 +56,7 @@
   border-radius: 10px;
   padding: 0.7em;
   margin-top: -2.8em;
+  outline: none !important;
 }
 
 .inputField::placeholder {
@@ -70,6 +71,15 @@
   border-radius: 10px;
   color: rgb(255, 255, 255);
   margin-top: 0.7em;
+  cursor: pointer;
+}
+
+.btn:hover {
+  color:  rgb(192, 169, 255);
+  background: white;
+  border: 1px solid rgb(192, 169, 255);
+
+
 }
 
 .newUser {
